--- a/scss/_sidebar.scss
+++ b/scss/_sidebar.scss
@@ -115,13 +115,14 @@
 @media only screen and (min-width:768px) {
   .sidebar { 
     width: 55%;
+    height: 70%;
     .closeBtn{
       right: 20px;
       top: 10px;
       font-size: 1.4rem;
     }
     .sidebarContainer{
-      grid-template-rows: 1fr 1.8fr;
+      grid-template-rows: 1fr 2fr;
     }
   }
 }
@@ -129,6 +130,7 @@
 @media only screen and (min-width: 1024px) {
   .sidebar { 
     width: 38%;
+    height: 100%;
     .closeBtn{
       right: 30px;
       top: 15px;
