--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -1,20 +1,20 @@
-.blogContainer{
-  .title{
+.blogContainer {
+  .title {
     font-family: "beautyDream";
     text-align: center;
     color: $dark;
     padding-top: 20px;
-    font-size: 2rem;    
+    font-size: 2rem;
   }
-  .blogGrid{
+  .blogGrid {
     display: grid;
     justify-items: center;
     grid-template-columns: 1fr;
-    grid-template-rows: repeat(8, auto);
+    grid-template-rows: auto;
     row-gap: 20px;
     padding-top: 20px;
     padding-bottom: 20px;
-    .articleContainer{
+    .articleContainer {
       position: relative;
       background-color: $cinereous;
       display: flex;
@@ -23,7 +23,7 @@
       border-radius: 10px;
       width: 96%;
       height: calc(96vw / 2);
-      &:before{    
+      &:before {
         border-radius: 10px;
         content: "";
         background-size: cover;
@@ -34,102 +34,120 @@
         left: 0px;
         opacity: 0.7;
       }
-      &:hover:before{
+      &:hover:before {
         opacity: 1;
         cursor: pointer;
       }
-      h2{
+      h2 {
         color: $light;
         font-family: "dosisMedium";
         position: relative;
         font-size: 1.2rem;
         text-align: center;
-        &:hover{
+        &:hover {
           cursor: pointer;
         }
       }
     }
-    .article1{
-      &:before{
-        background-image: url("../src//images/article1Image.jpg");
+    .jorgeArticle {
+      &:before {
+        background-image: url("../src/images/jorgeArticle.jpg");
       }
     }
-    .article2{
-      &:before{
+    .magdalenaArticle {
+      &:before {
+        background-image: url("../src/images/magdalenaArticle.jpg");
+      }
+    }
+    .matiasArticle {
+      &:before {
+        background-image: url("../src/images/matiasArticle.jpg");
+      }
+    }
+    .article1 {
+      &:before {
+        background-image: url("../src/images/article1Image.jpg");
+      }
+    }
+    .article2 {
+      &:before {
         background-image: url("../src/images/article2Image.jpg");
       }
     }
-    .article3{
-      &:before{
+    .article3 {
+      &:before {
         background-image: url("../src/images/article3Image.jpg");
       }
     }
-    .article4{
-      &:before{
+    .article4 {
+      &:before {
         background-image: url("../src/images/article4Image.jpg");
       }
     }
-    .article5{
-      &:before{
+    .article5 {
+      &:before {
         background-image: url("../src/images/article5Image.jpg");
       }
     }
-    .article6{
-      &:before{
+    .article6 {
+      &:before {
         background-image: url("../src/images/article6Image.jpg");
       }
     }
-    .article7{
-      &:before{
+    .article7 {
+      &:before {
         background-image: url("../src/images/article7Image.jpg");
       }
     }
-    .article8{
-      &:before{
+    .article8 {
+      &:before {
         background-image: url("../src/images/article8Image.jpg");
       }
     }
-    .article9{
-      &:before{
+    .article9 {
+      &:before {
         background-image: url("../src/images/article9Image.jpg");
       }
     }
-    .article10{
-      &:before{
+    .article10 {
+      &:before {
         background-image: url("../src/images/article10Image.jpg");
       }
     }
-    .article11{
-      &:before{
-        background-image: url("../src/images/article11Image.jpg");
-      }
-    }
-    .article12{
-      &:before{
-        background-image: url("../src/images/article12Image.jpg");
-      }
-    }
+  }
+  .introductoryArticlesGrid {
+    padding-bottom: 0px;
+    margin-bottom: 0px;
   }
 }
 
 @media only screen and (min-width: 1024px) {
-  .blogContainer{
-    .title{
+  .blogContainer {
+    .title {
       padding-top: 50px;
       font-size: 2.5rem;
     }
-    .blogGrid{
+    .blogGrid {
       grid-template-columns: 1fr 1fr;
       grid-template-rows: repeat(4, auto);
       row-gap: 50px;
       padding-top: 75px;
       padding-bottom: 75px;
-      .articleContainer{
+      .articleContainer {
         height: 275px;
         width: 550px;
-        h2{
+        h2 {
           font-size: 1.75rem;
         }
+      }
+    }
+    .introductoryArticlesGrid {
+      grid-template-columns: 1fr 1fr 1fr;
+      row-gap: 0;
+      border-bottom: 1px solid $almond;
+      .articleContainer {
+        height: 200px;
+        width: 400px;
       }
     }
   }
