--- a/src/App.css
+++ b/src/App.css
@@ -153,7 +153,7 @@ html a {
       font-size: 1.2rem; }
     .section1Container .homeDescriptionContainer .homeDescriptionText {
       font-family: "dosisRegular";
-      font-size: .8rem;
+      font-size: 0.8rem;
       padding-bottom: 10px;
       text-align: justify; }
 
@@ -176,7 +176,7 @@ html a {
       justify-content: flex-start;
       align-items: center; }
       .section1Container .subtitleContainer .imageSubtitleContainer .mapImage {
-        opacity: .8;
+        opacity: 0.8;
         height: 80%;
         border-radius: 20px; }
       .section1Container .subtitleContainer .imageSubtitleContainer .mapQuote {
@@ -277,11 +277,12 @@ html a {
     padding: 0px 20px; }
     .section3Container .section3TitleContainer .subTitleContainer .section3SubTitle {
       font-family: "dosisRegular";
-      font-size: .8rem;
+      font-size: 0.8rem;
       text-align: justify;
       margin-bottom: 10px; }
   .section3Container .professionalsContainer {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around; }
     .section3Container .professionalsContainer .professionalContainer {
       position: relative;
@@ -289,23 +290,34 @@ html a {
       flex-direction: column;
       align-items: center;
       justify-content: center; }
-    .section3Container .professionalsContainer .maidaContainer {
+    .section3Container .professionalsContainer .professionalContainer:first-child {
+      width: 100%; }
+    .section3Container .professionalsContainer .magdaContainer {
       width: 47vw;
       height: calc(47vw / 0.75);
       border-radius: 10px;
       background-image: url("../src/images/magda.jpeg");
       background-size: contain;
-      opacity: .5; }
-      .section3Container .professionalsContainer .maidaContainer:hover {
+      opacity: 0.5; }
+      .section3Container .professionalsContainer .magdaContainer:hover {
         opacity: 1; }
-    .section3Container .professionalsContainer .cokeContainer {
+    .section3Container .professionalsContainer .jorgeContainer {
       width: 47vw;
       height: calc(47vw / 0.75);
       background-image: url("../src/images/jorge.jpeg");
       border-radius: 10px;
       background-size: contain;
-      opacity: .5; }
-      .section3Container .professionalsContainer .cokeContainer:hover {
+      opacity: 0.5; }
+      .section3Container .professionalsContainer .jorgeContainer:hover {
+        opacity: 1; }
+    .section3Container .professionalsContainer .matiasContainer {
+      width: 47vw;
+      height: calc(47vw / 0.75);
+      background-image: url("../src/images/matias.jpg");
+      border-radius: 10px;
+      background-size: contain;
+      opacity: 0.5; }
+      .section3Container .professionalsContainer .matiasContainer:hover {
         opacity: 1; }
     .section3Container .professionalsContainer .professionalDescriptionContainer {
       margin: 10px;
@@ -318,13 +330,13 @@ html a {
       .section3Container .professionalsContainer .professionalDescriptionContainer .professionalName {
         font-family: "loveloBlack";
         padding: 5px;
-        font-size: .8rem;
+        font-size: 0.8rem;
         color: #fff;
         text-align: center; }
       .section3Container .professionalsContainer .professionalDescriptionContainer .professionalDescription {
         font-family: "dosisSemiBold";
         padding-bottom: 2px;
-        font-size: .7rem;
+        font-size: 0.7rem;
         color: #ede9e3;
         text-align: center; }
       .section3Container .professionalsContainer .professionalDescriptionContainer .seeMore {
@@ -336,7 +348,7 @@ html a {
     margin-top: 10px;
     padding-right: 20px;
     padding-left: 20px;
-    font-size: .8rem; }
+    font-size: 0.8rem; }
   .section3Container .videoContainer {
     display: flex;
     justify-content: center; }
@@ -367,10 +379,15 @@ html a {
       flex-direction: row; }
       .section3Container .professionalsContainer .professionalContainer {
         flex-direction: row; }
-      .section3Container .professionalsContainer .maidaContainer {
+      .section3Container .professionalsContainer .professionalContainer:first-child {
+        margin-bottom: 200px; }
+      .section3Container .professionalsContainer .magdaContainer {
         width: 27rem;
         height: 36rem; }
-      .section3Container .professionalsContainer .cokeContainer {
+      .section3Container .professionalsContainer .jorgeContainer {
+        width: 27rem;
+        height: 36rem; }
+      .section3Container .professionalsContainer .matiasContainer {
         width: 27rem;
         height: 36rem; }
       .section3Container .professionalsContainer .professionalDescriptionContainer {
@@ -712,7 +729,7 @@ html a {
   display: grid;
   justify-items: center;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(8, auto);
+  grid-template-rows: auto;
   row-gap: 20px;
   padding-top: 20px;
   padding-bottom: 20px; }
@@ -746,8 +763,14 @@ html a {
       text-align: center; }
       .blogContainer .blogGrid .articleContainer h2:hover {
         cursor: pointer; }
+  .blogContainer .blogGrid .jorgeArticle:before {
+    background-image: url("../src/images/jorgeArticle.jpg"); }
+  .blogContainer .blogGrid .magdalenaArticle:before {
+    background-image: url("../src/images/magdalenaArticle.jpg"); }
+  .blogContainer .blogGrid .matiasArticle:before {
+    background-image: url("../src/images/matiasArticle.jpg"); }
   .blogContainer .blogGrid .article1:before {
-    background-image: url("../src//images/article1Image.jpg"); }
+    background-image: url("../src/images/article1Image.jpg"); }
   .blogContainer .blogGrid .article2:before {
     background-image: url("../src/images/article2Image.jpg"); }
   .blogContainer .blogGrid .article3:before {
@@ -766,10 +789,10 @@ html a {
     background-image: url("../src/images/article9Image.jpg"); }
   .blogContainer .blogGrid .article10:before {
     background-image: url("../src/images/article10Image.jpg"); }
-  .blogContainer .blogGrid .article11:before {
-    background-image: url("../src/images/article11Image.jpg"); }
-  .blogContainer .blogGrid .article12:before {
-    background-image: url("../src/images/article12Image.jpg"); }
+
+.blogContainer .introductoryArticlesGrid {
+  padding-bottom: 0px;
+  margin-bottom: 0px; }
 
 @media only screen and (min-width: 1024px) {
   .blogContainer .title {
@@ -785,7 +808,14 @@ html a {
       height: 275px;
       width: 550px; }
       .blogContainer .blogGrid .articleContainer h2 {
-        font-size: 1.75rem; } }
+        font-size: 1.75rem; }
+  .blogContainer .introductoryArticlesGrid {
+    grid-template-columns: 1fr 1fr 1fr;
+    row-gap: 0;
+    border-bottom: 1px solid #e7d7c9; }
+    .blogContainer .introductoryArticlesGrid .articleContainer {
+      height: 200px;
+      width: 400px; } }
 
 .articleTextContainer {
   position: relative;
@@ -833,7 +863,7 @@ html a {
     position: relative;
     color: #fff;
     padding: 5px 0px;
-    font-size: .8rem; }
+    font-size: 0.8rem; }
   .articleTextContainer .textFoot {
     color: #fff;
     text-align: end;
@@ -868,12 +898,6 @@ html a {
 
 .article10:before {
   background-image: url("../src/images/article10Image.jpg"); }
-
-.article11:before {
-  background-image: url("../src/images/article11Image.jpg"); }
-
-.article12:before {
-  background-image: url("../src/images/article12Image.jpg"); }
 
 @media only screen and (min-width: 1024px) {
   .articleTextContainer {
