[feature] - added storage with firebase, and linked to articles.image

--- a/scss/_admin.scss
+++ b/scss/_admin.scss
@@ -18,8 +18,9 @@
     input {
       flex: 1;
       height: 50px;
-      padding-left: 50px;
-      padding-right: 50px;
+      padding-left: 25px;
+      padding-right: 25px;
+      margin: 10px;
     }
     textarea {
       flex: 1;
