--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -15,6 +15,9 @@
     padding-top: 20px;
     padding-bottom: 20px;
     .articleContainer {
+      &:before {
+        background-image: var(--image-url);
+      }
       position: relative;
       background-color: $cinereous;
       display: flex;
@@ -47,71 +50,6 @@
         &:hover {
           cursor: pointer;
         }
-      }
-    }
-    .jorgeArticle {
-      &:before {
-        background-image: url("../src/images/jorgeArticle.jpg");
-      }
-    }
-    .magdalenaArticle {
-      &:before {
-        background-image: url("../src/images/magdalenaArticle.jpg");
-      }
-    }
-    .matiasArticle {
-      &:before {
-        background-image: url("../src/images/matiasArticle.jpg");
-      }
-    }
-    .article1 {
-      &:before {
-        background-image: url("../src/images/article1Image.jpg");
-      }
-    }
-    .article2 {
-      &:before {
-        background-image: url("../src/images/article2Image.jpg");
-      }
-    }
-    .article3 {
-      &:before {
-        background-image: url("../src/images/article3Image.jpg");
-      }
-    }
-    .article4 {
-      &:before {
-        background-image: url("../src/images/article4Image.jpg");
-      }
-    }
-    .article5 {
-      &:before {
-        background-image: url("../src/images/article5Image.jpg");
-      }
-    }
-    .article6 {
-      &:before {
-        background-image: url("../src/images/article6Image.jpg");
-      }
-    }
-    .article7 {
-      &:before {
-        background-image: url("../src/images/article7Image.jpg");
-      }
-    }
-    .article8 {
-      &:before {
-        background-image: url("../src/images/article8Image.jpg");
-      }
-    }
-    .article9 {
-      &:before {
-        background-image: url("../src/images/article9Image.jpg");
-      }
-    }
-    .article10 {
-      &:before {
-        background-image: url("../src/images/article10Image.jpg");
       }
     }
   }
