[features] - added articles with index property, fixed some errors in styles

--- a/src/App.css
+++ b/src/App.css
@@ -722,6 +722,10 @@ html a {
   .react-datetime-picker input {
     width: fit-content; }
 
+.loadingContainer {
+  flex: 1;
+  min-height: 90vh; }
+
 .blogContainer .title {
   font-family: "beautyDream";
   text-align: center;
