--- a/scss/_seeMore.scss
+++ b/scss/_seeMore.scss
@@ -1,4 +1,4 @@
-.seeMoreContainer{
+.seeMoreContainer {
   position: absolute;
   z-index: 2000;
   top: 45px;
@@ -6,13 +6,13 @@
   width: 96%;
   background-color: $isabeline;
   border-radius: 20px;
-  box-shadow: 0px 0px 13px 8px rgba(163, 143, 133,.35);
-  -webkit-box-shadow: 0px 0px 13px 8px rgba(163, 143, 133,.35);
-  -moz-box-shadow: 0px 0px 13px 8px rgba(163, 143, 133,.35);
+  box-shadow: 0px 0px 13px 8px rgba(163, 143, 133, 0.35);
+  -webkit-box-shadow: 0px 0px 13px 8px rgba(163, 143, 133, 0.35);
+  -moz-box-shadow: 0px 0px 13px 8px rgba(163, 143, 133, 0.35);
   opacity: 0;
   animation: fadeIn 1s ease-in-out forwards;
   padding: 10px;
-  .closeBtn{
+  .closeBtn {
     color: $cinereous;
     position: absolute;
     font-family: "LoveloBlack";
@@ -22,95 +22,79 @@
     top: 10px;
     font-size: 1.1rem;
   }
-  h2{
+  h2 {
     text-align: center;
     font-family: "loveloBlack";
     color: $cinereous;
     padding-top: 5px;
     font-size: 1.3rem;
   }
-  h3{
+  h3 {
     text-align: center;
     font-family: "dosisRegular";
     color: $cinereous;
-    padding: 10px 0px;
+    padding: 10px 50px;
     font-size: 1rem;
   }
-  .teamDescriptionContainer{
+  .teamDescriptionContainer {
     display: grid;
     grid-template-columns: 1fr;
     grid-template-rows: repeat(14, align-items);
-    grid-template-areas: "L1" "L2" "L3" "L4" "L5" "L6" "R1" "R2" "R3" "R4" "R5" "R6";
     row-gap: 10px;
     padding: 10px 10px 10px 0px;
-    .teamDescriptionItemContainer{
+    .teamDescriptionItemContainer {
       display: flex;
-      .teamDescriptionItem{
+      .teamDescriptionItem {
         display: flex;
         align-items: flex-start;
         justify-content: flex-start;
       }
     }
-    .teamDescriptionText{
+    .teamDescriptionText {
       padding-left: 10px;
       color: $dark;
       font-family: "dosisRegular";
       text-align: justify;
-      font-size: .8rem;
+      font-size: 0.8rem;
     }
   }
-  .L1{grid-area: L1;}
-  .L2{grid-area: L2;}
-  .L3{grid-area: L3;}
-  .L4{grid-area: L4;}
-  .L5{grid-area: L5;}
-  .L6{grid-area: L6;}
-  .R1{grid-area: R1;}
-  .R2{grid-area: R2;}
-  .R3{grid-area: R3;}
-  .R4{grid-area: R4;}
-  .R5{grid-area: R5;}
-  .R6{grid-area: R6;}
 }
 
-
 @media only screen and (min-width: 1024px) {
-  .seeMoreContainer{
+  .seeMoreContainer {
     top: 120px;
     left: 13%;
     width: 74%;
-    .closeBtn{
+    .closeBtn {
       right: 25px;
       top: 15px;
       font-size: 1.5rem;
     }
-    h2{
+    h2 {
       padding-top: 30px;
       font-size: 1.87rem;
     }
-    h3{
-      padding: 30px 0px;
+    h3 {
+      padding: 30px 120px;
       font-size: 1.5rem;
     }
-    .teamDescriptionContainer{
+    .teamDescriptionContainer {
       grid-template-columns: 1fr 1fr;
       grid-template-rows: repeat(7, align-items);
-      grid-template-areas: "L1 R1" "L2 R2" "L3 R3" "L4 R4" "L5 R5" "L6 R6";
       row-gap: 30px;
       column-gap: 100px;
       padding: 20px 50px;
-      .teamDescriptionItemContainer{
-        .teamDescriptionItem{
-          
+      .teamDescriptionItemContainer {
+        .teamDescriptionItem {
         }
       }
-      .teamDescriptionText{
+      .teamDescriptionText {
         font-size: 1rem;
       }
     }
   }
 }
 
-.seeMoreClosed{
+.seeMoreClosed {
   animation: fadeOut 1s ease-in-out backwards;
 }
