--- a/scss/_seeMore.scss
+++ b/scss/_seeMore.scss
@@ -42,8 +42,10 @@
     grid-template-rows: repeat(14, align-items);
     row-gap: 10px;
     padding: 10px 10px 10px 0px;
+    align-items: center;
     .teamDescriptionItemContainer {
       display: flex;
+      align-items: center;
       .teamDescriptionItem {
         display: flex;
         align-items: flex-start;
@@ -79,14 +81,17 @@
       font-size: 1.5rem;
     }
     .teamDescriptionContainer {
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: repeat(7, align-items);
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: auto;
       row-gap: 30px;
       column-gap: 100px;
       padding: 20px 50px;
-      .teamDescriptionItemContainer {
-        .teamDescriptionItem {
-        }
+      grid-auto-flow: dense;
+      .leftColumn {
+        grid-column: 1;
+      }
+      .rightColumn {
+        grid-column: 2;
       }
       .teamDescriptionText {
         font-size: 1rem;
