--- a/src/App.css
+++ b/src/App.css
@@ -914,9 +914,11 @@ html a {
     grid-template-columns: 1fr;
     grid-template-rows: repeat(14, align-items);
     row-gap: 10px;
-    padding: 10px 10px 10px 0px; }
+    padding: 10px 10px 10px 0px;
+    align-items: center; }
     .seeMoreContainer .teamDescriptionContainer .teamDescriptionItemContainer {
-      display: flex; }
+      display: flex;
+      align-items: center; }
       .seeMoreContainer .teamDescriptionContainer .teamDescriptionItemContainer .teamDescriptionItem {
         display: flex;
         align-items: flex-start;
@@ -944,11 +946,16 @@ html a {
       padding: 30px 120px;
       font-size: 1.5rem; }
     .seeMoreContainer .teamDescriptionContainer {
-      grid-template-columns: 1fr 1fr;
-      grid-template-rows: repeat(7, align-items);
+      grid-template-columns: repeat(2, 1fr);
+      grid-template-rows: auto;
       row-gap: 30px;
       column-gap: 100px;
-      padding: 20px 50px; }
+      padding: 20px 50px;
+      grid-auto-flow: dense; }
+      .seeMoreContainer .teamDescriptionContainer .leftColumn {
+        grid-column: 1; }
+      .seeMoreContainer .teamDescriptionContainer .rightColumn {
+        grid-column: 2; }
       .seeMoreContainer .teamDescriptionContainer .teamDescriptionText {
         font-size: 1rem; } }
 
@@ -1130,6 +1137,27 @@ html a {
         text-align: center; }
         .adminContainer .blogGrid .articleContainer h2:hover {
           cursor: pointer; }
+
+.loginFormContainer {
+  width: 100%;
+  height: 60vh;
+  padding: 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center; }
+  .loginFormContainer .formRow {
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 50vh; }
+    .loginFormContainer .formRow label {
+      justify-self: start;
+      padding-right: 20px; }
+  .loginFormContainer .loginButton {
+    border-radius: 10px;
+    padding: 5px 30px; }
 
 .main-content {
   filter: blur(2px); }
